Improve no targets response